<resources>

    <string name="app_name">DoliStock</string>

    <string name="messageRedirection" translatable="false">
        Pour passer en mode déconnecté vous devez d\'abord vous connecter.
        Vous avez donc été redirigé vers la page de connexion.</string>

    <string name="messageModeConnecte" translatable="false">
        Vous devez être connecté à internet pour utiliser le mode connecté.</string>

    <!-- texte de la ligne de titre -->
    <string name="titre_co">Connexion</string>
    <string name="titre_liste">Toutes les listes</string>
    <string name="titre_ajout_liste">Création d\'une liste</string>
    <string name="titre_modif_liste">Modification d\'une liste</string>

    <!-- texte de la sous-ligne de titre -->
    <string name="sous_titre_mode">Choix du mode</string>
    <string name="sous_titre_data">Données de l\'utilisateur</string>
    <string name="sous_titre_listes">Encore non envoyées</string>

    <string name="mode_co">Mode connecté</string>
    <string name="mode_deco">Mode déconnecté</string>

    <!-- libellés des boutons -->
    <string name="libelle_co">Se connecter</string>
    <string name="libelle_valider">Valider</string>
    <string name="libelle_bloquer">Bloquer</string>
    <string name="libelle_debloquer">Débloquer</string>
    <string name="libelle_Raz">Réinitialiser</string>

    <!-- label des champs de saisie -->
    <string name="label_api">URL de connexion : </string>
    <string name="label_login">Identifiant : </string>
    <string name="label_mdp">Mot de passe : </string>

    <!-- placeholder des champs de saisie -->
    <string name="info_api">Exemple d\'URL : dolistock.go.yo.fr</string>
    <string name="info_login">Entrez votre identifiant</string>
    <string name="info_mdp">Entrez votre mot de passe</string>

    <!-- placeholder des champs de saisie -->
    <string name="description_image">Logo de l\'application DoliStock</string>

    <!-- informations bas de page -->
    <string name="info_1_co">Si c’est votre première connexion, vous devez obligatoirement vous
        connecter en mode connecté.</string>
    <string name="info_mdp_co">En cas d’oubli de votre mot de passe ou de votre identifiant,
        veuillez contacter l’administrateur.</string>

    <string name="erreur_de_saisie">Erreur de saisie : %1$s</string>
    <string name="erreur_quantite_invalide">Quantité invalide</string>
    <string name="code_article_incorrect">Code article incorrect</string>
    <string name="veuillez_saisir_code_article">Veuillez saisir un code article</string>
    <string name="veuillez_saisir_quantite">Veuillez saisir une quantité</string>
    <string name="article_deja_present">Article déjà présent dans la liste</string>
    <string name="veuillez_saisir_nom_liste">Veuillez saisir un nom de liste</string>
    <string name="entrepot_incorrect">Entrepôt incorrect</string>

    <!-- informations concernant les listes -->
    <string name="Liste_numero"> Liste N°</string>
    <string name="date_création"> Créée le date à heure</string>
    <string name="entrepotNum">Entrepôt</string>
    <string name="enStock">en stock</string>

    <!-- informations concernant l'ajout de listes -->
    <!-- Libellés -->
    <string name="label_title_liste">Libellé de la liste :</string>
    <string name="label_entrepot">Entrepôt :</string>
    <string name="label_update">Mode de mise à jour :</string>
    <string name="label_code_article">Code article :</string>
    <string name="label_quantite">Quantité :</string>
    <string name="label_appercu">Aperçu de la liste</string>
    <string name="label_unite">unités</string>
    <string name="label_ajout_modif">Ajout / Modification</string>
    <!-- Infos EditText -->
    <string name="info_title_liste">Entrez le libellé</string>
    <string name="info_entrepot">Entrez l\'entrepot</string>
    <string name="info_update">Entrez le mode de mise à jour</string>
    <string name="info_code_article">Entrez le code article</string>
    <string name="info_quantite">Entrez la quantité</string>

    <!--  placeholder des champs de saisie  -->
    <string name="libelle_visualisation">Visualiser</string>
    <string name="libelle_modification">Modifier</string>
    <string name="libelle_ajouter">Ajouter</string>
    <string name="libelle_envoyer">Envoyer</string>

    <!--  type de mode  -->
    <string name="Ajout">Ajout</string>
    <string name="Modification">Modification</string>

    <!--  Entrepôt  -->
    <string name="Entrepot">Entrepôt : </string>
    <string name="EntrepotOk">Entrepôt Ok</string>
    <string name="EntrepotIncorrect">Entrepôt incorrect !</string>

    <!--  Erreurs  -->
    <string name="ErreurSaisie">Erreur de saisie</string>
    <string name="ErreurTousLesChamps">Erreur : tous les champs ne sont pas renseignés.</string>
    <string name="ErreurJSON">Erreur : récupération du JSON incorrecte.</string>
    <string name="Erreur">Erreur</string>
    <string name="ErreurConnexionInternet">Erreur : vous n\'avez pas de connexion à Internet.</string>
    <string name="ErreurLoginMdp">Erreur : login ou mot de passe incorrect.</string>
    <string name="ErreurDolibarr">Erreur : accès impossible à Dolibarr.</string>

    <!-- PopUp -->
    <string name="boutonValider">Valider</string>
    <string name="boutonAnnuler">Annuler</string>
    <string name="boutonAccueil">Accueil</string>
    <string name="messageValidationSupp">Êtes-vous sûr de vouloir supprimer cette liste ?</string>
    <string name="messageSuppression">La liste a bien été supprimée.</string>
    <string name="messageModification">La liste a bien été modifiée.</string>
    <string name="messageEnvoi">La liste a bien été envoyée.</string>
    <string name="messageAjout">La liste a bien été ajoutée.</string>
    <string name="optionSupprimer">Supprimer</string>
    <string name="boutonConfirmer">Confirmer</string>
    <string name="liste_invalide">Attention : liste insérée sur Dolibarr mais une ou plusieurs
        ligne(s) sont invalide(s).</string>
    <string name="date_creation">Date de création : </string>

</resources>