<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="@string/messageValidationSupp"
        android:paddingBottom="16dp"
        android:layout_marginBottom="@dimen/marge_15"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/marge_15">

        <Button
            android:id="@+id/cancelButton"
            style="@style/StyleMiniBouton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boutonAnnuler"
            android:layout_marginEnd="@dimen/marge_8"/>

        <Button
            android:id="@+id/validateButton"
            style="@style/StyleMiniBouton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boutonConfirmer"
            android:layout_marginStart="@dimen/marge_8"/>

    </LinearLayout>

</LinearLayout>
