<?xml version="1.0" encoding="utf-8"?>
<!-- Layout de Visualisation -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/visualisation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pagevisualisation.Visualisation"
    android:orientation="vertical">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <!--  Entête de la page  -->
        <TextView
            android:id="@+id/libelleListe"
            android:textAppearance="@style/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marge_5"
            android:layout_marginLeft="@dimen/marge_5"
            android:textStyle="bold"
            android:text="@string/Liste_numero"/>

        <TextView
            android:id="@+id/libelleDateCrea"
            android:textAppearance="@style/page_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marge_5"
            android:layout_below ="@id/libelleListe"
            android:text="@string/date_création"/>

        <LinearLayout android:id="@+id/LinearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/libelleListe"
            android:layout_marginTop="@dimen/marge_8"
            android:gravity="right">

            <ImageButton
                android:id="@+id/btnRetour"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginTop="@dimen/marge_10"
                android:layout_marginLeft="@dimen/marge_15"
                android:background="@drawable/retour"
                android:onClick="onClickRetour"/>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="50dp"
                android:layout_height="@dimen/hauteur_image_mini"
                android:layout_marginLeft="@dimen/marge_5"
                android:layout_toRightOf="@id/btnRetour"
                android:layout_marginRight="@dimen/marge_5"
                android:contentDescription="@string/description_image"
                android:elevation="@dimen/effet"
                android:src="@drawable/logo"/>


        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/libelleEntrepot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marge_5"
        android:text="@string/entrepotNum"
        android:textAppearance="@style/page_sub_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/informationListe"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marge_8"
        android:background="@color/medium_grey"
        android:gravity="center" />
</LinearLayout>
