<?xml version="1.0" encoding="utf-8"?>
<!-- Layout de ListeActivity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pageliste.ListeActivity"
    android:orientation="vertical">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <!--  Entête de la page  -->
        <TextView
            android:id="@+id/titreCo"
            android:textAppearance="@style/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marge_5"
            android:layout_marginLeft="@dimen/marge_5"
            android:textStyle="bold"
            android:text="@string/titre_liste"/>

        <TextView
            android:textAppearance="@style/page_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marge_5"
            android:layout_below ="@id/titreCo"
            android:text="@string/sous_titre_listes"/>

        <LinearLayout android:id="@+id/LinearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/titreCo"
            android:layout_marginTop="@dimen/marge_8"
            android:gravity="right">

            <ImageButton
                android:id="@+id/btnDeco"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginTop="@dimen/marge_10"
                android:layout_marginLeft="@dimen/marge_15"
                android:background="@drawable/logodeco"
                android:onClick="onClickDeco"/>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="50dp"
                android:layout_height="@dimen/hauteur_image_mini"
                android:layout_marginLeft="@dimen/marge_5"
                android:layout_toRightOf="@id/btnRetour"
                android:layout_marginRight="@dimen/marge_5"
                android:contentDescription="@string/description_image"
                android:elevation="@dimen/effet"
                android:src="@drawable/logo"/>

        </LinearLayout>

    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/liste_listes_accueil"
        android:scrollbars="vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/titreCo"
        android:layout_marginTop="@dimen/marge_8"
        android:background="@color/medium_grey"
        android:gravity="center" />

    <LinearLayout android:id="@+id/LinearLayout2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="@dimen/marge_15"
        android:gravity="bottom">

        <LinearLayout android:id="@+id/LinearLayout3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/titreCo"
            android:layout_marginTop="@dimen/marge_8"
            android:layout_marginBottom="@dimen/marge_15"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnRetour"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginLeft="@dimen/marge_15"
                android:background="@drawable/retour"
                android:onClick="onClickRetour"/>

            <ImageButton
                android:id="@+id/btnAjout"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginLeft="@dimen/marge_15"
                android:background="@drawable/logoajout"
                android:onClick="onClickAjouter"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
